--- a/views/books/list.hbs
+++ b/views/books/list.hbs
@@ -108,7 +108,7 @@
                                                     </a>
                                                     <h5>{{basePrice}}</h5>
                                                     <p>{{detail}}</p>
-                                                    <a class="btn hvr-hover" href="#">Add to Cart</a>
+                                                    <a class="btn hvr-hover" href="#" onclick=" return addProductToCart({{json ../cart._id}},{{json _id}})">Add to Cart</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -279,7 +279,7 @@
                                                     </a>
                                                     <h5>\{{basePrice}}</h5>
                                                     <p>\{{detail}}</p>
-                                                    <a class="btn hvr-hover" href="#">Add to Cart</a>
+                                                    <a class="btn hvr-hover" href="#" onclick=" return addProductToCart(\{{json ../cart._id}},\{{json _id}})">Add to Cart</a>
                                                 </div>
                                             </div>
                                         </div>
