--- a/views/books/detail.hbs
+++ b/views/books/detail.hbs
@@ -32,7 +32,7 @@
                             <li>
                                 <div class="form-group quantity-box">
                                     <label class="control-label">Quantity</label>
-                                    <input class="form-control" disabled value="{{stock}}" min="0" max="20" type="number">
+                                    <input class="form-control" disabled value="{{stock}}" min="0" max="20" type="number" id="stock">
                                 </div>
                             </li>
                         </ul>
@@ -40,7 +40,7 @@
                         <div class="price-box-bar">
                             <div class="cart-and-bay-btn">
                                 <a class="btn hvr-hover" data-fancybox-close="" href="#" onclick="return addProductAndGoToCart({{json cart._id}},{{json _id}})">Mua hàng</a>
-                                <a class="btn hvr-hover" data-fancybox-close="" href="#" onclick=" return addProductToCart({{json cart._id}},{{json _id}})">Thêm vào giỏ</a>
+                                <a class="btn hvr-hover" data-fancybox-close="" href="#" onclick=" return addProductToCartFromDetail({{json cart._id}},{{json _id}})">Thêm vào giỏ</a>
                             </div>
                         </div>
 
