+ add order detail + add order history list + add tracking order

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -55,7 +55,7 @@
                         <div class="dropdown-content" style="margin-right: 20px;">
                             <a href="/users/profile">Tài khoản</a>
                             <a href="/users/change-pasword">Đổi mật khẩu</a>
-                            <a href="">Giỏ hàng</a>
+                            <a href="/users/history-order">Lịch sử mua hàng</a>
                             <a href="/users/logout">Logout</a>
                         </div>
                         {{else}}
