--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,4 +1,16 @@
-
+<div class="all-title-box">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2>Profile</h2>
+                <ul class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="#">User</a></li>
+                    <li class="breadcrumb-item active">Profile</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <div class="container bootstrap snippet" style="padding-top:50px; padding-bottom:50px;">
