--- a/views/index/body.hbs
+++ b/views/index/body.hbs
@@ -47,29 +47,59 @@
     <!-- Start Categories  -->
     <div class="categories-shop">
         <div class="container">
+             <div class="title-all text-center">
+                <h1>TOP 3 SẢN PHẨM BÁN CHẠY NHẤT</h1>
             <div class="row">
+                {{#each books}}
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="shop-cat-box">
-                        <img class="img-fluid" src="images/categories_img_01.jpg" alt="" />
-                        <a class="btn hvr-hover" href="#">Nhãn sách 1</a>
+                        <img class="img-fluid" src="{{cover}}" alt="" />
+                        <a class="btn hvr-hover" href="/books/detail/{{_id}}">{{title}}</a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <div class="shop-cat-box">
-                        <img class="img-fluid" src="images/categories_img_02.jpg" alt="" />
-                        <a class="btn hvr-hover" href="#">Nhãn sách 2</a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <div class="shop-cat-box">
-                        <img class="img-fluid" src="images/categories_img_03.jpg" alt="" />
-                        <a class="btn hvr-hover" href="#">Nhãn sách 3</a>
-                    </div>
+                {{/each}}
                 </div>
             </div>
         </div>
     </div>
     <!-- End Categories -->
+
+    <!-- Most Seen -->
+    <div class="row my-5">
+        <div class="col-lg-12">
+            <div class="title-all text-center">
+                <h1>TOP 10 SẢN PHẨM ĐƯỢC XEM NHIỀU NHẤT</h1>
+            </div>
+            <div class="featured-products-box owl-carousel owl-theme">
+                {{#each mostSeen}}
+                <div class="shop-cat-box">
+                    <img class="img-fluid" src="{{cover}}" alt="" style="width: 400px; height: 400px;"/>
+                    <a class="btn hvr-hover" href="/books/detail/{{_id}}">{{title}}</a>
+                 </div>
+                {{/each}}
+            </div>
+        </div>
+    </div>
+
+    <!-- End Most Seen-->
+
+    <!-- New Books -->
+   <div class="row my-5">
+        <div class="col-lg-12">
+            <div class="title-all text-center">
+                <h1>SẢM PHẨM MỚI</h1>
+            </div>
+            <div class="featured-products-box owl-carousel owl-theme">
+                {{#each newBooks}}
+                <div class="shop-cat-box">
+                    <img class="img-fluid" src="{{cover}}" alt="" style="width: 400px; height: 400px;"/>
+                    <a class="btn hvr-hover" href="/books/detail/{{_id}}">{{title}}</a>
+                 </div>
+                {{/each}}
+            </div>
+        </div>
+    </div>
+    <!-- End New Books-->
 	
 	<div class="box-add-products">
 		<div class="container">
