--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -14,12 +14,11 @@
 
 
 <div class="container bootstrap snippet" style="padding-top:50px; padding-bottom:50px;">
-    <div class="row">
-        <div style="margin-left: 93px;"><h1>{{firstName}} {{lastName}}</h1></div>
-    </div>
+   
     <div class="row">
         <div class="col-sm-3"><!--left col-->
             <div class="text-center">
+                <h1>{{lastName}} {{firstName}} </h1>
                 <img src="{{cover}}" class="avatar img-circle img-thumbnail" alt="avatar">
                 <h6>Upload a different photo...</h6>
                 <input type="file" class="text-center center-block file-upload" name="file-avatar" form="registrationForm" >
@@ -52,13 +51,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
-
-                            <div class="col-xs-6">
-                                <label for="phone"><h4>Phone</h4></label>
-                                <input type="text" class="form-control" name="phone" id="phone" value="{{phone}}" title="enter your phone number if any.">
-                            </div>
-                        </div>
+                        
 
                         <div class="form-group">
                             <div class="col-xs-6">
