--- a/views/index/body.hbs
+++ b/views/index/body.hbs
@@ -53,7 +53,7 @@
                 {{#each books}}
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="shop-cat-box">
-                        <img class="img-fluid" src="{{cover}}" alt="" />
+                        <img class="img-fluid" src="{{cover}}" alt="" style="width: 400px; height: 400px;" />
                         <a class="btn hvr-hover" href="/books/detail/{{_id}}">{{title}}</a>
                     </div>
                 </div>
